@@ -4,7 +4,8 @@
 
 * Development
 
-- =org-modern-star=, =org-modern-progress=: Support string values.
+- =org-modern-star=, =org-modern-hide-stars=, =org-modern-progress=: Support string
+  values.
 
 * Version 1.1 (2023-12-01)
 
